# go-kafka-example

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.local.yaml  docker-compose.yaml  go.mod  go.sum  pyproject.toml
cmd/: consumer.go  main.go
cmd/consumer/: main.go
cmd/producer/: main.go
config/: config.go  config.yaml
config/monitoring/: prometheus.yml
consumer/: consumer.py  test.py
consumer/k/: kafka.py
docker/: consumer.Dockerfile  docker-consumer-entrypoint.sh  producer.Dockerfile
internal/dto/: user.go
internal/middleware/: cors.go  healthz.go  http.go  metrics.go  middlewares.go
internal/models/: email.go  product.go  user.go
internal/server/: grpcServer.go  httpHandler.go  server.go
kafka_py/: application.py  consumer.py  producer.py  run.py  test.py
kafka_py/adapter/: kafka_adapter.py
kafka_py/config/: config.py
kafka_py/extensions/: handler_extension.py
kafka_py/jobs/: mail_job.py
kafka_py/utils/: email.py  logger.py  normalize.py  otp.py
migrations/: 000001_init_schema.up.sql  000002_mock_data_init.up.sql
pb/user/: user.pb.go  user.proto  user_grpc.pb.go
pgdata/: postmaster.pid
pgdata/global/: 1136_vm  1137  1213_vm  1214  1214_vm  1232  1233  1260  1260_vm  1261  1261_vm  1262  2396  2396_vm  2397  2671  2672  2676  2677  2694  2695  2697  2698  2847  2965  2967  3593  4176  4178  4180  4182  4184  4186  6001  6114  6115  pg_control  pg_internal.init
pgdata/pg_stat/: db_13478.stat
pgdata/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
pkg/customError/: message.go
py/: producer.py
(+274 files in other folders)
